' Generated by UML Generator
' Encoded: jLN9Rjim4BthAtXq41l8EOSYZfgsEIG86gDtYfpOX2dIu5B0NVwz72sKAB95MoGN0PgDxptE36-ieyRvLbRsADI96jeI9gcrM-UCQBo3UwRLi_W6vAew20w42SCaL5KNHMu5EuTVyhqYPDE88-pE9xWcpo5PxT5seFPE0dE2RQqLrbsJHci9LA5p4pwNGubLOwZYO-gQj9g3d7uDA4Vban4ibEVQDnBMP0_KrDghK5KeTu7Lzk1k1nYhYncGIpjpB866mAzQS0mJzjC2CPQPC6ETBEAt9CV2FqUzTiQpOw_MYPwbfdodbHqP3OBj31KIJ2vLb_q_Ge7Q2mLrtUcq9YyUPC9_KEvfWeIi8oWaFVSLe2yb73WKnHjz1QgPO5_W8AO6cpD7Gy8T3GNsKRsXrB_hryd3g6HUKWUr3ZVEwTdsJJUNAKXuhrvqsdZOaNXYtewTDK4pKp6aFI2oBAst9gZJjCyJW-mMvxuIqwNyZrezQATDM00ykOfqzAB6XVZN6-oFenLfzQSYfycyI5kIAJD9PWCDo-c8v5w3sTzCeW4qhz9RlHiIK-xHcjHDCpyCPsIT51qPYgLoDJMzMCgtxxKsDeebxDOxtTAm-_9z5TBUS5iz3bXIHQ8rWPgifuWutqwJgqHifiluy6qsFzwLfgJgDttdpdobgUeYnu0_U_4soeLlGF7mcFy2
' URL: http://www.plantuml.com/plantuml/uml/jLN9Rjim4BthAtXq41l8EOSYZfgsEIG86gDtYfpOX2dIu5B0NVwz72sKAB95MoGN0PgDxptE36-ieyRvLbRsADI96jeI9gcrM-UCQBo3UwRLi_W6vAew20w42SCaL5KNHMu5EuTVyhqYPDE88-pE9xWcpo5PxT5seFPE0dE2RQqLrbsJHci9LA5p4pwNGubLOwZYO-gQj9g3d7uDA4Vban4ibEVQDnBMP0_KrDghK5KeTu7Lzk1k1nYhYncGIpjpB866mAzQS0mJzjC2CPQPC6ETBEAt9CV2FqUzTiQpOw_MYPwbfdodbHqP3OBj31KIJ2vLb_q_Ge7Q2mLrtUcq9YyUPC9_KEvfWeIi8oWaFVSLe2yb73WKnHjz1QgPO5_W8AO6cpD7Gy8T3GNsKRsXrB_hryd3g6HUKWUr3ZVEwTdsJJUNAKXuhrvqsdZOaNXYtewTDK4pKp6aFI2oBAst9gZJjCyJW-mMvxuIqwNyZrezQATDM00ykOfqzAB6XVZN6-oFenLfzQSYfycyI5kIAJD9PWCDo-c8v5w3sTzCeW4qhz9RlHiIK-xHcjHDCpyCPsIT51qPYgLoDJMzMCgtxxKsDeebxDOxtTAm-_9z5TBUS5iz3bXIHQ8rWPgifuWutqwJgqHifiluy6qsFzwLfgJgDttdpdobgUeYnu0_U_4soeLlGF7mcFy2
' Generated on: 2026-03-20T14:57:24.809729

@startuml
skinparam classAttributeIconSize 0
hide circle

class Bicycle {
  -bikeType: String
  -hasElecticAssist: boolean
  --
  +Bicycle(brand: String, model: String, rentalPrice: double, gearCount: int)
  +getBikeType(): String
  +setBikeType(bikeType: String): void
  +isHasElecticAssist(): boolean
  +setHasElecticAssist(hasElecticAssist: boolean): void
}

class Truck {
  -payloadTons: double
  -hasTrailer: boolean
  --
  +Truck(brand: String, model: String, rentalPrice: double, engineCC: int, fuelType: String)
  +getPayloadTons(): double
  +setPayloadTons(payloadTons: double): void
  +isHasTrailer(): boolean
  +setHasTrailer(hasTrailer: boolean): void
}

class Vehicle {
  -brand: String
  -model: String
  -rentalPrice: double
  --
  +Vehicle(brand: String, model: String, rentalPrice: double)
  +calculateCost(days: int): double
  +getInfo(): String
  +getBrand(): String
  +setBrand(brand: String): void
  +getModel(): String
  +setModel(model: String): void
  +getRentalPrice(): double
  +setRentalPrice(rentalPrice: double): void
}

class NonMotorizedVehicle {
  -gearCount: int
  --
  +NonMotorizedVehicle(brand: String, model: String, rentalPrice: double, gearCount: int)
  +getGearCount(): int
  +setGearCount(gearCount: int): void
}

class MotorizedVehicle {
  -engineCC: int
  -fuelType: String
  --
  +MotorizedVehicle(brand: String, model: String, rentalPrice: double, engineCC: int, fuelType: String)
  +refuel(): void
  +getEngineCC(): int
  +setEngineCC(engineCC: int): void
  +getFuelType(): String
  +setFuelType(fuelType: String): void
}

class Car {
  -numDoors: int
  -isAutomatic: boolean
  --
  +Car(brand: String, model: String, rentalPrice: double, engineCC: int, fuelType: String)
  +getNumDoors(): int
  +setNumDoors(numDoors: int): void
  +isAutomatic(): boolean
  +setAutomatic(isAutomatic: boolean): void
}

Bicycle --|> NonMotorizedVehicle
Truck --|> MotorizedVehicle
NonMotorizedVehicle --|> Vehicle
MotorizedVehicle --|> Vehicle
Car --|> MotorizedVehicle
@enduml